--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ section#drops {
   justify-content: center;
   font-family: 'Roboto', sans-serif;
 }
-select {
+#drops select {
   margin: 0 0 10px;
   padding: 10px;
   font-size: 1em;
