--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100&display=swap');
+html {
+  scroll-behavior: smooth;
+}
 
 section#drops {
   display: flex;
