--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@ html {
   scroll-behavior: smooth;
 }
 
-section#drops {
+section#drops, section#drops-recommended {
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: 'Roboto', sans-serif;
   margin: 20px 0;
 }
-#drops select {
+#drops select, #drops-recommended select {
   width: 100%;
   margin: 0 0 10px;
   padding: 10px;
@@ -72,7 +72,7 @@ section#drops {
   display: flex;
   justify-content: center;
 }
-.drops-image {
+.drops-image, .drops-image-oil {
   position: relative;
   width: 200px;
   height: 400px;
@@ -128,7 +128,7 @@ section#drops {
     padding: 0 15px 0 0;
     font-size: 0.9em;
   }
-  .drops-image {
+  .drops-image, .drops-image-oil {
     display: none;
   }
   .drops-settings {
@@ -172,6 +172,6 @@ section#drops {
   color: #354237;
 }
 
-.recomended {
+.recommended {
   height: 650px;
 }
