--- a/css/style.css
+++ b/css/style.css
@@ -200,3 +200,32 @@ section#drops, section#drops-recommended {
 .recommended {
   height: 650px;
 }
+
+.drops-content-appear {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  flex-direction: column;
+  background-color: #000000c7;
+  width: 100%;
+  height: 100vh;
+}
+
+.close-drop {
+  padding: 10px;
+  text-align: right;
+  color: white;
+  font-size: 2em;
+}
+
+.close-drop span {
+  cursor: pointer;
+}
+
+.post-password-required {
+  width: 300px;
+  height: 300px;
+  background-color: red;
+  cursor: pointer;
+}
